<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"


    android:background="@drawable/cardview"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/enter_item"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/InputFieldsLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:padding="10dp"
            android:weightSum="4">


            <EditText
                android:id="@+id/itemnametxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="1"
                android:gravity="left"
                android:hint="@string/item_name"
                android:inputType="text"

                android:maxEms="1" />

            <EditText
                android:id="@+id/itempricetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="1"
                android:gravity="center_horizontal"

                android:hint="@string/price"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <View
            android:id="@+id/Divider"
            style="@style/Divider_Purple"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/statebtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/add"
            android:textColor="@color/Crayolas_blue" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>