<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ExtendedLookup_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/toolbar_gradiant"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="@+id/TotalMoney"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"

                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_attach_money_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/TotalMoney"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TotalMoney"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:gravity="center"
                android:text="120000.9"
                android:textColor="@color/white"
                android:layout_marginRight="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>





    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ItemList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/cardview_shadow_colored"

        android:padding="20dp"

            app:layout_constraintBottom_toTopOf="@+id/expenseNavBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />






        <!--the normal Floating action button which is
            anchored to the bottom navigation button-->


        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            app:hideOnScroll="true"
            app:backgroundTint="@android:color/transparent"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="10dp"
            app:fabCradleVerticalOffset="5dp"

            >

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/expenseNavBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"

                app:menu="@menu/expense_navitems"
                app:itemTextColor="@color/white"
                app:itemIconTint="@color/white"/>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            app:layout_anchor="@id/bottomAppBar"
            android:contentDescription="@string/add"
            app:srcCompat="@drawable/ic_add_black_24dp"
            />

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/expenseNavBar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="56dp"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:background="@drawable/toolbar_gradiant"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:itemTextColor="@color/white"-->
    <!--        app:itemIconTint="@color/white"-->
    <!--        app:menu="@menu/expense_navitems" />-->

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/addItem"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="end|bottom"-->
    <!--        android:layout_margin="20dp"-->
    <!--        android:backgroundTint="@color/colorPrimary"-->
    <!--        android:contentDescription="@string/add"-->
    <!--        android:src="@drawable/ic_add_black_24dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"-->
    <!--        app:layout_constraintEnd_toEndOf="parent" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        android:visibility="gone"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/delete"
        app:srcCompat="@drawable/ic_delete_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>